<resources>
    <string name="app_name">MealTime</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="today_date">Mon, Feb 21</string>
    <string name="meal_plan">Meal Plan</string>
    <string name="ingredients_list">Ingredients List</string>
    <string name="settings">Settings</string>
    <string name="_30">30</string>
    <string name="min">min</string>
    <string name="calories_number">2000</string>
    <string name="servings_number">6</string>
    <string name="servings">servings</string>
    <string name="name_of_meal">Name of Meal</string>
    <string name="calories">calories</string>
    <string name="calories_icon">calories_icon</string>
    <string name="servings_icon">servings_icon</string>
    <string name="prep_time_icon">prep_time_icon</string>
    <string name="meal_preview">meal_preview</string>
    <string name="generate_meal_plan">Generate Meal Plan</string>
    <string name="meal_description">30 min | 3000 calories | 6 servings</string>
    <string name="meal_item_name">Meal Item Name</string>
    <string name="meal_picture">meal_picture</string>
    <string name="chopped_parsley">Chopped parsley</string>
    <string name="_5_cups">5 cups</string>
    <string name="step_number">1.</string>
    <string name="instruction">Pour water into the pot.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>