<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <Space
        android:layout_width="16dp"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <androidx.cardview.widget.CardView
        android:layout_width="184dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        app:cardCornerRadius="16dp">

        <ImageView
            android:id="@+id/mealItemImage"
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:contentDescription="@string/meal_picture"
            android:cropToPadding="true"
            android:scaleType="centerCrop"
            tools:srcCompat="@drawable/chicken_stir_fry_1" />

    </androidx.cardview.widget.CardView>

    <Space
        android:layout_width="16dp"
        android:layout_height="wrap_content" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TextView
            android:id="@+id/mealItemName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/dm_sans_bold"
            android:text="@string/meal_item_name"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/mealItemDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:fontFamily="@font/dm_sans"
            android:text="@string/meal_description"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mealItemName" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>